# BentoOCR

./: README.md  import_model.py  pyproject.toml  requirements.txt  service.py
deepseek-ocr/: service.py
