[project]
name = "BentoOCR"
version = "0.1.0"
description = "OCR Service with BentoML"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["bentoml>=1.3.20", "easyocr>=1.7.2"]

[project.scripts]
service = "service:OCRService"

[tool.ruff]
# We ignore E501 (line too long) here because we keep user-visible strings on one line.
target-version = "py310"
extend-include = ["*.ipynb"]
preview = true
line-length = 119
indent-width = 2

[tool.ruff.format]
preview = true
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = ["E501"]

[dependency-groups]
dev = ["ipython>=8.31.0"]

[tool.bentoml.build]
service = "service:OCRService"
include = ["service.py"]
[tool.bentoml.build.python]
lock_packages = false
[tool.bentoml.build.docker]
python_version = "3.11"
